Update src/main/java/org/dependencytrack/search/FuzzyVulnerableSoftwareSearchMananger.java
Set.of is enough

Co-authored-by: Niklas <nscuro@protonmail.com>